k8s/deploy/scapybox/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: scapybox
spec:
  selector:
    app: scapybox
  ports:
    - name: http
      port: 8888
      targetPort: 8888
